--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -12,8 +12,8 @@
   <title>React App</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="h-100 bg-light">
+  <div class="h-100" id="root"></div>
 </body>
 
 </html>
